--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <title>Concurrent React Demo</title>
+    <script
+      async
+      data-uid="cf8fa0ea1f"
+      src="https://jacques-blom.ck.page/cf8fa0ea1f/index.js"
+    ></script>
   </head>
   <body class="text-base text-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
